--- a/Server/package.json
+++ b/Server/package.json
@@ -6,6 +6,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "firebase-admin": "^11.11.0",
+    "firebase-functions": "^4.5.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "node": "^21.1.0",
