--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-tailwind/react": "^2.1.4",
     "@reduxjs/toolkit": "^1.9.7",
     "@stripe/react-stripe-js": "^2.4.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,15 +14,22 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
     "cookies": "^0.8.0",
+    "framer-motion": "^10.16.5",
     "json-server": "^0.17.4",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
+    "react-phone-number-input": "^3.3.7",
     "react-redux": "^8.1.3",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-spring": "^9.7.3",
+    "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
