--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-tailwind/react": "^2.1.4",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@stripe/react-stripe-js": "^2.4.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -15,6 +16,7 @@
     "axios": "^1.6.1",
     "cookies": "^0.8.0",
     "framer-motion": "^10.16.5",
+    "google-auth-library": "^9.2.0",
     "json-server": "^0.17.4",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
